# ej-server

./: .coveragerc  .dockerignore  .editorconfig  .env  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.txt  Gemfile  LICENSE  Pipfile  README.md  README.rst  ci.html  configure.sh  contributing.html  db.json  deploy-ec2.html  deploy.html  dev-community.html  dev-style.html  dev.html  digitaloceanssh.sh  docker-images.html  env.example  environment-variables.html  fabfile.py  genindex.html  index.html  install.html  integration_test.py  local.yml  manage.py  objects.inv  overview.html  prepare-environment.html  (+28 more)
.circleci/: config.yml
ISSUE_TEMPLATES/: BUG_REPORT_TEMPLATE.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
_sources/: deploy-ec2.rst.txt  index.rst.txt
_sources/dev-docs/: _index.rst.txt  architecture.rst.txt  deploy.rst.txt  quick-start.rst.txt  themes.rst.txt
_sources/i18n/: index.rst.txt
_sources/pycharm/: configuration.rst.txt
_sources/user-guide/: code-of-conduct.rst.txt  under-the-hood.rst.txt
_static/: documentation_options.js
api/: index.html  intex.html
api-docs/: index.html
besouro/: .gitlab-ci.yml
besouro/kubernetes/: api-deployment.yaml  ej-server-deployment.yaml  ingress.yaml  postgres-deployment.yaml  rabbit-deployment.yaml  redis-deployment.yaml
compose/caddy/: Caddyfile
compose/dev/: django.env  postgres.env  test_env
compose/local/: django.env
compose/production/: Dockerfile  django.env.example  postgres.env.example  rabbit.env.example
conf/: cloc.txt
conf/requirements/: production.txt
config/: api.py  celery.py  forms.py  jinja2.py  urls.py  utils.py  views.py  views_utils.py  wsgi.py
config/fixes/: __init__.py  django_old_apis.py  unregister_admin.py
config/services/: __init__.py  postgres.py
config/settings/: base.py  celery.py  constance.py  core.py  local.py  production.py  test.py
conversations/: apps.py  models.py  serializers.py  views.py
crowdin/pt-BR/: _index.html  architecture.html  contributing.html  deploy.html  environment-variables.html  index.html  preparation.html  processes.html  quick-start.html  social-login.html  themes.html  urls.html
dev-docs/: _index.html  api-docs.html  architecture.html  contributing.html  deploy.html  dev-bestpractices.html  dev-community.html  dev-contributing.html  dev-i18n.html  dev-integration.html  dev-repository.html  dev-style.html  environment-variables.html  i18n.html  preparation.html  processes.html  quick-start.html  social-login.html  themes.html  urls.html
docker/: Dockerfile  Dockerfile-base  Dockerfile-deploy  Dockerfile-dev  Dockerfile-nginx  Dockerfile.deploy  Dockerfile.dev  Dockerfile.django  Dockerfile.django-base  Dockerfile.django-dev  Dockerfile.nginx  Dockerfile.waitmongo  README.md  config.env  docker-compose.deploy.yml  docker-compose.production.yml  docker-compose.rocket.yml  docker-compose.yml  initial_script.js  nginx.conf  postgres-entrypoint.sh  run_local_server.sh  run_prod_server.sh  variables.env  wait-for-mongodb.sh
docker/base/: README.md  build.yml  production.build.yml
docker/base-images/: Dockerfile-local  Dockerfile-postgres  Dockerfile-python_alpine  Dockerfile-python_buster  Dockerfile-python_deploy  Dockerfile-python_dev  Dockerfile-python_install  Dockerfile-python_test  Dockerfile-tools  build.sh  requirements-production.txt
docker/cicd/: Dockerfile  build.yml  use.yml
docker/deploy/: docker-compose.yml
docker/develop/: README.md  idle.yml  start.yml  test.yml
docker/env/: deploy.env  django.env  email.env  local.env  override.env  postgres.env  rabbit.env  rocket.env
docker/extensions/: README.md  rocket.css  rocket.js  rocketchat.yml
docker/images/: Dockerfile-python_buster  Dockerfile-python_install  Dockerfile-sass  Dockerfile-webpack  README.rst  build.sh  requirements-develop.txt  requirements-production.txt
docker/local/: README.md  build.yml  idle.yml  start.yml  test.yml
docker/old/: Dockerfile-mongo  config.env  docker-compose.local.yml
docker/production/: README.md  deploy.example.yml  latest.build.yml  master.build.yml  staging.build.yml
docker/rocketchat/: README.md  rocket.js  rocket.scss
docker/scripts/: mongo_script.js
docs/: Makefile  PULL_REQUEST_TEMPLATE.md  ci.rst  conf.py  contributing.rst  deploy-ec2.rst  deploy.rst  dev-community.rst  dev-devel.rst  dev-documentation.rst  dev-integration.rst  dev-repository.rst  dev-start.rst  dev-style.rst  dev.rst  environment-variables.rst  index.rst  make.bat  prepare-environment.rst  stack.rst  themes.rst  urls.rst  user-admin.rst  user-ai.rst  user-popular.rst  user-start.rst  user.rst
docs/_rtd/: conf.py
docs/_templates/: layout.html
docs/api/: index.rst
docs/cod-docs/: _index.rst  ej.rst  ej_clusters.rst  ej_conversations.rst
docs/dev-docs/: _index.rst  architecture.rst  deploy.rst  dev-arch.rst  environment-variables.rst  preparation.rst  quick-start.rst  social-login.rst  themes.rst  urls.rst
docs/i18n/: index.rst
docs/old/: deploy.rst  environment-variables.rst  prepare-environment.rst  social-login.rst  urls.rst
docs/pt-br/: CONTRIBUTING.rst
docs/pycharm/: configuration.rst
docs/user-guide/: _index.rst  accessibility.rst_  account.rst_  ai-overview.rst  conversations.rst  how-does-it-work.rst_  index.rst  (+8 more)
ej/: __init__.py  all.py
etc/: babel.cfg  cloc.txt  codecov.yml  gitlab-ci.yml  requirements-ci.txt  requirements-dev.txt  requirements.txt
features/: environment.py  home-non-looged.feature  home-page.feature
i18n/: _images  _sources  _static  index.html
lib/: .babelrc  g.cpp  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js
local-example/: README.rst  social-icons.json
nginx/: besouro-prod.conf  besouro.conf
pt-br/: contribuicoes.html  index.html
pycharm/: configuration.html
requirements/: base.txt  develop.txt  local.txt  production.txt  test.txt
user-guide/: _index.html  accessibility.html  account.html  code-of-conduct.html  how-does-it-work.html  manage-conversations.html  under-the-hood.html
(+2181 files in other folders)
